Chage db connection for OKD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 security.oauth2.authorization.check-token-access=permitAll()
 security.oauth2.authorization.token-key-access=permitAll()
 
-spring.datasource.url=jdbc:postgresql://localhost:5442/postgres
-spring.datasource.username=postgres
-spring.datasource.password=mysecretpassword
+spring.datasource.url=jdbc:postgresql://console.marfa-dev.space:30438/authorization
+spring.datasource.username=dev_user
+spring.datasource.password=a
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
